acrescentando interação usuário

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             </div>
         </div>
         <p id="welcome">Olá, <span id="user"></span>!<br>Deixa eu te apresentar o meu currículo.<br>Passe o mouse ou clique nas opções abaixo.<br>Espero que goste!</p>
-        <!--<script>
+        <script>
             var user = prompt("Por favor, digite seu nome :D")
             document.getElementById('user').innerHTML = user;
-        </script>-->
+        </script>
     </header>
     <!---->
     
