corrigindo responssividade mobile

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olá!</title>
+    <link rel="shortcut icon" href="images/icons8-processador-64.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="anima.js"></script>
@@ -17,7 +18,21 @@
                     <img id="photo" src="images/photo.jpeg" alt="Eu">
                 </div>
             </div>
-            <p id="welcome">Olá, <span id="user"></span>!<br>Deixa eu te apresentar o meu currículo.<br>Passe o mouse ou clique nas opções abaixo.<br>Espero que goste!</p>
+            <div>
+                <p id="welcome">Olá, <span id="user"></span>!<br>Deixa eu te apresentar o meu currículo.<br>Passe o mouse ou clique nas opções abaixo.<br>Espero que goste!</p>
+                <br>
+                
+                <table id="contato">
+                    <tr>
+                        <td><a target="_blank" href="https://api.whatsapp.com/send?phone=5582991844466"><img src="images/whatsapp.png" alt="WhatsApp" srcset=""></a></td>
+                        <td>(82)9 9184-4466</td>
+                    </tr>
+                    <tr>
+                        <td><a target="_blank" href="https://mail.google.com/mail/"><img src="images/gmail.png" alt="Gmail" srcset=""></a></td>
+                        <td>jwgs@ic.ufal.br</td>
+                    </tr>
+                </table>
+            </div>
         </div>
         <!--<script>
             var user = prompt("Por favor, digite seu nome :D")
@@ -129,7 +144,7 @@
                         <div class="carousel-item">
                             <div class="box-items-carousel">
                                 <img class="logo" src="images/selenium-logo.png" alt="Selenium framework">
-                                <p class="text-carousel">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae maxime neque cum culpa adipisci molestias facilis explicabo voluptas ab doloribus aspernatur laudantium fugit animi, alias nostrum fugiat dignissimos consequuntur eos.</p>
+                                <p class="text-carousel">Quando estudei a disciplina "Projeto de Software", me interessei pela área de Quality Assurence, então aprendi a fazer testes funcionais por meio do framework Selenium.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
