--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 </table>
             </div>
         </div>
-        <!--<script>
+        <script>
             var user = prompt("Por favor, digite seu nome :D")
             document.getElementById('user').innerHTML = user;
-        </script>-->
+        </script>
     </header>
     <!---->
     
