--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                         <div class="accordion-body accordion-down">
-                        Tenho formação em <strong>Eletrotécnica</strong> pelo Instituto Federal de Alagoas - IFAL. Lá, adquiri meus conhecimentos sobre elétrica e eletrônica.<br>Enquanto estudante de Eng da Computação, fui monitor da disciplina de Programação 1, onde elevei minhas habilidades com a <strong>linguagem de programação C</strong> e, posteriormente, participei de um projeto numa empresa com o objetivo de criar arquivos ".c" e ".h", usados em configurações de inversores de frequência. Neste período, também aprendi sobre a <strong>metodologia Scrum</strong> e a ferramenta <strong>Trello</strong>, ambas utilizadas no processo.
+                        Tenho formação em <strong>Eletrotécnica</strong> pelo Instituto Federal de Alagoas - IFAL. Lá, adquiri meus conhecimentos sobre elétrica e eletrônica.<br>Enquanto estudante de Eng da Computação, fui monitor da disciplina de Programação 1, onde elevei minhas habilidades com a <strong>linguagem de programação C</strong>. Tenho conhecimentos na manipulação de arquivos ".c" e ".h", <strong>metodologia Scrum</strong> e a ferramenta <strong>Trello</strong>.
                         </div>
                     </div>
                 </div>
